<resources>
    <!-- General -->
    <string name="app_name">TravelBook</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="test">Test Notification</string>
    <string name="saved_to_db_message">%s was created successfully</string>
    <string name="updated_in_db_message">%s was updated successfully</string>
    <string name="removed_from_db_message">%s was removed successfully</string>

    <string name="date">Date</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>

    <!-- Main Tabs -->
    <string name="packing_tab">Packing</string>
    <string name="itinerary_tab">Itinerary</string>
    <string name="expenses_tab">Expenses</string>

    <!-- Trip -->
    <string name="create_trip">Create your trip</string>
    <string name="modify_trip">Modify your trip</string>
    <string name="trip_title">Trip Title</string>
    <string name="trip_image">Upload an image</string>
    <string name="invalid_trip_info">Please enter more information about the trip.</string>


    <!-- Packing List  -->
    <string name="add_packing_item">Add an item to your packing list</string>
    <string name="packing_quantity">Quantity</string>
    <string name="packing_item">Item</string>
    <string name="invalid_packing_item">Please enter more information about the item.</string>
    <string name="packing_item_error">There was an error adding the item to your packing list. Please try again.</string>
    <string name="firebase_suggestions_error">There was an error retrieving suggestions. Please try again.</string>
    <string name="firebase_get_suggestions">Get Suggestions</string>

    <!-- Itinerary Events  -->
    <string name="add_itinerary_event">Add an event to your itinerary</string>
    <string name="event_title">Event Title</string>
    <string name="invalid_itinerary_event">Please enter more information about the event.</string>
    <string name="itinerary_event_error">There was an error adding the event to your itinerary. Please try again.</string>

    <!-- Expense -->
    <string name="add_expense">Add an expense to your trip</string>
    <string name="expense_description">Expense Description</string>
    <string name="expense_amount">Amount</string>
    <string name="dollar_sign">$%.2f</string>
    <string name="invalid_expense">Please enter more information about the expense.</string>
    <string name="expense_error">There was an error adding the expense to your trip. Please try again.</string>

    <!-- Notifications -->
    <string name="notification_channel_name">Trip Notifications</string>
    <string name="trip_notification_title">Are you ready for your upcoming trip?</string>
    <string name="trip_notification_message">Pack for %s!</string>
    <string name="event_notification_title">Upcoming event on your trip</string>
    <string name="event_notification_message">%s starts in 30 minutes!</string>

    <!-- Widget -->
    <string name="widget_no_upcoming_events">No upcoming event</string>
    <string name="widget_add_events">Please add an event</string>
    <string name="widget_error_loading_app">There was a problem loading TravelBook</string>

    <!-- Content Descriptions -->
    <string name="cd_home_fab">Create trip</string>
    <string name="cd_trip_detail_fab">Add item to trip</string>
    <string name="cd_save">Save</string>
    <string name="cd_add_image">Add image</string>

    <!-- Transitions -->
    <string name="transition_trip_image">trip_image</string>


</resources>
