<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/side_margin">

    <TextView
        android:id="@+id/add_packing_item_title"
        style="@style/DetailTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/add_packing_item" />

    <EditText
        android:id="@+id/add_packing_item_quantity"
        style="@style/DetailBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/packing_quantity"
        android:inputType="number" />

    <EditText
        android:id="@+id/add_packing_item_item"
        style="@style/DetailBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/packing_item"
        android:inputType="text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_packing_item_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cd_save"
        android:text="@string/save" />

</LinearLayout>