<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/side_margin">

    <TextView
        android:id="@+id/trip_info_screen"
        style="@style/DetailTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/create_trip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/trip_info_title_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trip_info_screen">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/trip_info_title"
            style="@style/DetailBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/trip_title"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/trip_info_start_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toStartOf="@+id/trip_info_end_container"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trip_info_title_container">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/trip_info_start"
            style="@style/DetailBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="false"
            android:hint="@string/start_date"
            android:inputType="date" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/trip_info_end_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/trip_info_start_container"
        app:layout_constraintTop_toBottomOf="@id/trip_info_title_container">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/trip_info_end"
            style="@style/DetailBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="false"
            android:hint="@string/end_date"
            android:inputType="date" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/trip_info_add_image_text"
        style="@style/DetailBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/trip_image"
        app:layout_constraintEnd_toEndOf="@id/trip_info_start_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trip_info_start_container" />

    <ImageView
        android:id="@+id/trip_info_image_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/side_margin"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/cd_add_image"
        android:src="@drawable/icon_add_photo"
        app:layout_constraintEnd_toEndOf="@id/trip_info_add_image_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trip_info_add_image_text" />

    <ImageView
        android:id="@+id/trip_info_image"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="@dimen/side_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/trip_info_end_container"
        app:layout_constraintTop_toBottomOf="@id/trip_info_end_container" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/trip_info_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/cd_save"
        android:text="@string/save"
        android:textSize="@dimen/button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trip_info_image" />

</androidx.constraintlayout.widget.ConstraintLayout>