<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="@dimen/side_margin"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/add_itinerary_event_title"
        android:text="@string/add_itinerary_event"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/DetailTitle"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/itinerary_event_title_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/add_itinerary_event_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/itinerary_event_title"
            android:hint="@string/event_title"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/DetailBody"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/itinerary_event_start_date_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/itinerary_event_title_container"
        app:layout_constraintEnd_toStartOf="@+id/itinerary_event_end_date_container">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/itinerary_event_start_date"
            android:hint="@string/start_date"
            android:inputType="date"
            android:focusableInTouchMode="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/DetailBody"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/itinerary_event_end_date_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/itinerary_event_title_container"
        app:layout_constraintStart_toEndOf="@+id/itinerary_event_start_date_container">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/itinerary_event_end_date"
            android:hint="@string/end_date"
            android:inputType="date"
            android:focusableInTouchMode="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/DetailBody"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/itinerary_event_start_time_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/itinerary_event_start_date_container"
        app:layout_constraintEnd_toStartOf="@+id/itinerary_event_end_time_container">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/itinerary_event_start_time"
            android:hint="@string/start_time"
            android:inputType="date"
            android:focusableInTouchMode="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/DetailBody"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/itinerary_event_end_time_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/itinerary_event_start_date_container"
        app:layout_constraintStart_toEndOf="@+id/itinerary_event_start_time_container">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/itinerary_event_end_time"
            android:hint="@string/end_time"
            android:inputType="date"
            android:focusableInTouchMode="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/DetailBody"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/itinerary_event_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textSize="@dimen/button_text"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/itinerary_event_start_time_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>